# vr-teleop-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: pure_sim.py  teleop_bi_dk1.py
src/vr_teleop_kit/: __init__.py
src/vr_teleop_kit/core/: pose_mapping.py
src/vr_teleop_kit/ik/: decoupled_ik.py  model.py
src/vr_teleop_kit/lerobot/: __init__.py  bi_quest_teleop.py  cli.py  single_arm_quest_teleop.py
src/vr_teleop_kit/relay/: server.py
src/vr_teleop_kit/relay/web/: client.js  index.html
tools/: probe_urdf.py  smoke_test.py  viewer_client.py
